fixed animations and stretched image

--- a/styles.css
+++ b/styles.css
@@ -65,65 +65,3 @@ hr {
      text-shadow: 2px 0px 0px gold;
       text-decoration: underline;
 }
-
-/* DEMO-SPECIFIC STYLES */
-.typewriter b {
-    color: #fff;
-    overflow: hidden; /* Ensures the content is not revealed until the animation */
-    height: 1.3em;
-    border-right: .05em solid white;
-    white-space: nowrap; /* Keeps the content on a single line */
-    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
-    letter-spacing: .15em; /* Adjust as needed */
-
-    animation: 
-      typing 3.5s steps(30, end),
-      blink-caret .5s step-end infinite;
-  }
-
-  .typewriter h1 
-  {
-    width: 80%;
-  }
-
-  #mainTitle
-  {
-      text-shadow: 1px 1px 3px gold; 
-      letter-spacing: 10px;
-      text-decoration: underline; 
-      text-decoration-color: green;
-      font-size: 0.5em;
-  }
-  @media only screen and (max-width: 500px) 
-  {
-      .fit{
-        font-size: 0.7em;
-      }
-      #mainTitle
-      {
-          font-size: 0.3em;
-          padding-left: 1em;
-      }
-      #robotName
-      {
-          font-size: 2.5em;
-      }
-      .typewriter b 
-      {
-        animation: 
-        blink-caret .5s step-end infinite;
-      }
- }
-  
-  /* The typing effect */
-  @keyframes typing {
-    from { width: 0 }
-    to { width: 50% }
-  }
-  
-  /* The typewriter cursor effect */
-  @keyframes blink-caret {
-    from, to { border-color: transparent }
-    50% { border-color: white }
-  }
-  
